# restaurant_api

./: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
app/: container.py  database.py  exceptions.py  main.py
app/dependencies/: client_dependencies.py  dish_dependencies.py  dish_type_dependencies.py  order_dependencies.py  product_dependencies.py  product_type_dependencies.py  unit_of_mesurement_dependencies.py
app/models/: __init__.py  base.py  bill.py  client.py  composition_of_dish.py  dish.py  order.py  product.py  type_of_dish.py  type_of_product.py  unit_of_measurement.py
app/repository/: __init__.py  base_repository.py  bill_repository.py  client_repository.py  composition_of_dish.py  composition_of_dish_repository.py  crud.py  dish_repository.py  order_repository.py  product_repository.py  type_of_dish_repository.py  type_of_product_repository.py  unit_of_measurement_repository.py
app/routers/: client.py  composition_of_dish.py  dish.py  dish_type.py  order.py  product.py  product_type.py  unit_of_measurements.py
app/schemas/: base_schema.py
app/schemas/address/: address_schema.py
app/schemas/bill/: create_bill_schema.py
app/schemas/client/: client_schema.py  create_client_schema.py  update_client_schema.py
app/services/: __init__.py  base_service.py  composition_of_dish_service.py  dish_service.py  order_service.py  product_service.py
migrations/: env.py
migrations/versions/: 0a0e2bec36c6_pk_changes.py  0a9424eea157_some_changes.py  3d46706d145b_db_init.py  4f77ec297c1d_init.py
scripts/: init_db.sql
(+23 files in other folders)
