[tool.poetry]
name = "restaurant-api"
version = "0.1.0"
description = ""
authors = ["kirill568 <kirill568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg = "^3.1.18"
asyncpg = "^0.29.0"
postgres = "^4.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
yarl = "^1.9.4"
pytest-asyncio = "^0.23.6"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
